add Input, add Login form ui, add lazy modal

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,9 @@
   "Главная страница": "Главная страница",
   "Язык": "Русский",
   "Страница не найдена!": "Страница не найдена!",
-  "Ошибка приложения!": "Ошибка приложения!"
+  "Ошибка приложения!": "Ошибка приложения!",
+  "Username": "Username",
+  "Password": "Password",
+  "Войти": "Войти",
+  "Вход": "Вход"
 }
