--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,9 @@
   "Главная страница": "Main page",
   "Язык": "English",
   "Страница не найдена!": "Page not found!",
-  "Ошибка приложения!": "Ошибка приложения!"
+  "Ошибка приложения!": "Ошибка приложения!",
+  "Username": "Username",
+  "Password": "Password",
+  "Войти": "Войти",
+  "Вход": "Вход"
 }
